# coreml-playground

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DESIGN.md  Makefile  README.md  build.rs  tailwind.config.js
scripts/: demo-setup.sh  with-wasm-bindgen-cli.sh
src/: app.rs  lib.rs  main.rs  types.rs
src/bridge/: ffi.rs  mod.rs
src/components/: chat.rs  command_palette.rs  comparison.rs  export.rs  input_bar.rs  introspection.rs  mod.rs  model_diff.rs  model_switcher.rs  onboarding.rs  resizable.rs  session_sidebar.rs  settings.rs  toast.rs  visualization.rs
src/server/: api.rs  inference.rs  interpreter.rs  middleware.rs  mod.rs  model_registry.rs  session_store.rs
style/: main.css
swift/: CoreMLBridge.swift
tests/: test_inference.rs  test_interpreter_roundtrip.rs  test_middleware.rs  test_model_registry.rs  test_session_persistence.rs  test_settings.rs  test_types.rs
