[package]
name = "coreml-playground"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
leptos = { version = "0.8.0" }
leptos_meta = { version = "0.8.0" }
leptos_router = { version = "0.8.0" }
leptos_axum = { version = "0.8.0", optional = true }

axum = { version = "0.8.0", optional = true }
tokio = { version = "1", features = ["rt-multi-thread", "fs", "sync"], optional = true }
tower = { version = "0.5", optional = true }
tower-http = { version = "0.6", features = ["fs", "cors"], optional = true }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde", "js"] }

rusqlite = { version = "0.32", features = ["bundled"], optional = true }
notify = { version = "7", optional = true }

wasm-bindgen = { version = "0.2", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }
web-sys = { version = "0.3", features = [
    "Navigator", "Clipboard", "Document", "Window",
    "HtmlElement", "HtmlInputElement", "HtmlTextAreaElement",
    "HtmlHtmlElement", "EventTarget",
    "File", "FileList", "FileReader", "Blob", "BlobPropertyBag",
    "DragEvent", "DataTransfer", "DataTransferItemList",
    "KeyboardEvent",
    "Url", "Element", "Event",
    "HtmlCanvasElement", "CanvasRenderingContext2d", "ImageData",
    "Storage",
], optional = true }
js-sys = { version = "0.3", optional = true }
console_error_panic_hook = { version = "0.1", optional = true }
gloo-timers = { version = "0.3", features = ["futures"], optional = true }

cfg-if = "1"

[features]
default = []
hydrate = [
    "leptos/hydrate",
    "dep:wasm-bindgen",
    "dep:wasm-bindgen-futures",
    "dep:web-sys",
    "dep:js-sys",
    "dep:console_error_panic_hook",
    "dep:gloo-timers",
]
ssr = [
    "leptos/ssr",
    "leptos_meta/ssr",
    "leptos_router/ssr",
    "dep:leptos_axum",
    "dep:axum",
    "dep:tokio",
    "dep:tower",
    "dep:tower-http",
    "dep:rusqlite",
    "dep:notify",
]

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["test-util", "macros", "rt"] }

[profile.wasm-release]
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"

[package.metadata.leptos]
output-name = "coreml-playground"
site-root = "target/site"
site-pkg-dir = "pkg"
style-file = "style/main.css"
assets-dir = "public"
site-addr = "127.0.0.1:3100"
reload-port = 3101
browserquery = "defaults"
env = "DEV"
bin-features = ["ssr"]
bin-default-features = false
lib-features = ["hydrate"]
lib-default-features = false
lib-profile-release = "wasm-release"
